# tarbox

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  README_zh.md  SECURITY.md  TASK05_PROGRESS.md  TESTING_SUMMARY.md  build.rs  config.toml.example  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: build-release.yml  ci.yml  docker.yml  e2e.yml  release.yml
deploy/csi/: csidriver.yaml  (+6 more)
docs/: README.md  csi-usage.md  docker-compose.md  docker-optimization.md  wasi-usage.md
migrations/: 20260115000001_initial_schema.sql  20260118000002_create_audit_logs.sql  20260118000003_create_layers.sql  20260118000004_create_text_storage.sql  20260129230626_create_mount_entries.sql  20260129231741_create_published_mounts.sql  20260129233046_update_layers_for_mounts.sql
scripts/: README.md  csi-sanity-test.sh  install-hooks.sh  run-e2e-tests.sh
spec/: 00-overview.md  01-advanced-storage.md  01-database-schema.md  02-fuse-interface.md  03-audit-system.md  04-layered-filesystem.md  05-kubernetes-csi.md  06-api-design.md  07-performance.md  08-filesystem-hooks.md  09-multi-tenancy.md  10-text-file-optimization.md  11-dependencies.md  12-native-mounting.md  13-wasi-interface.md  14-filesystem-interface.md  15-testing-strategy.md  16-advanced-storage.md  17-tarbox-wasi-crate.md  18-filesystem-composition.md  README.md  REORGANIZATION.md  REORGANIZATION_COMPLETED.md
src/: lib.rs  main.rs  types.rs
task/: 00-mvp-roadmap.md  01-project-setup.md  02-database-layer-mvp.md  03-filesystem-core-mvp.md  04-cli-tool-mvp.md  04-cli-tool.md  05-fuse-interface.md  05-layered-filesystem.md  06-database-layer-advanced.md  07-filesystem-core-advanced.md  08-layered-filesystem.md  09-cli-tool-advanced.md  10-integrate-layer-cow-to-filesystem.md  11-audit-system.md  13-kubernetes-csi-driver.md  14-rest-api.md  15-grpc-api.md  16-wasi-support.md  17-macos-fuse-support.md  18-csi-sanity-testing.md  19-mount-entries-foundation.md  20-layer-publishing.md  21-mount-level-layer-chains.md  22-http-api-composition.md  23-cli-composition-commands.md  README.md
tests/: audit_integration_test.rs  config_and_storage_models_test.rs  cow_storage_integration_test.rs  csi_integration_test.rs  filesystem_integration_test.rs  filesystem_layer_integration_test.rs  fuse_backend_integration_test.rs  fuse_integration_test.rs  fuse_mount_e2e_test.rs  hooks_integration_test.rs  layer_file_type_transition_test.rs  layer_integration_test.rs  storage_e2e_test.rs  storage_integration_test.rs  storage_layer_integration_test.rs  storage_models_comprehensive_test.rs  text_storage_integration_test.rs  union_view_integration_test.rs  wasi_adapter_integration_test.rs
(+51 files in other folders)
