[package]
name = "tarbox"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MPL"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
config = "0.15.19"
fuser = { version = "0.16.0", features = ["abi-7-31"] }
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
kube = { version = "3.0.0", features = ["client", "runtime"] }
libc = "0.2.180"
mockall = { version = "0.14.0", optional = true }
moka = { version = "0.12.12", features = ["future"] }
prometheus = "0.14.0"
prost = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
similar = "2.7.0"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "json",
  "postgres",
  "runtime-tokio",
  "uuid"
] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tonic = "0.14.2"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }

[dev-dependencies]
criterion = "0.8.1"
mockall = "0.14.0"
proptest = "1.9.0"
tempfile = "3.24.0"
tokio-test = "0.4.5"

[build-dependencies]
tonic-build = "0.14.2"

[features]
mockall = ["dep:mockall"]
